{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Normal Movement",
            "id": "eafcfb38-55a2-4e97-8430-5e63fab9d290",
            "actions": [
                {
                    "name": "LeftRight",
                    "type": "PassThrough",
                    "id": "02e8fa2f-8c66-40a3-8fcd-8dfbccdf9bf3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UpDown",
                    "type": "Button",
                    "id": "b868d5e2-ed81-45d2-aeab-6b8450e27bf1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "b044234d-4d7c-4ae0-9fdb-c01866d6b1c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "LeftRight",
                    "id": "dcac4115-ed47-4a77-86d4-80547876615f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d075d386-9531-4ee8-a099-705c1ff89821",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "6fa1f181-015d-4d9d-9b4c-b7c0c1f23249",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "UpDown",
                    "id": "bf9c9bac-15e2-4cd2-95cf-0c9bf15f59ab",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c0ec5407-cdc0-4a12-aad0-d891ff42dc06",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ceace089-912a-4dbe-a392-1bd0e29fc729",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "05dd4fff-e3ff-4c3f-aa8d-e6a83a4eb718",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "6899c78a-4c8b-441e-aaa2-ff1389100d25",
            "actions": [
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "f85d5036-5622-4547-817c-766dae07d1ea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dd6183fd-fc8a-4736-86bd-b96f8a6da028",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}